force-app/main/default/objects/leaseworks__Insurance_Reduction_Schedule__c/leaseworks__Insurance_Reduction_Schedule__c.object-meta.xml
<CustomObject>
    <description>Schedule for Agreed Value reduction for insurance purposes. Auto generated if using Insurance Requirements Template
[MODULE: Contract]
[LOAD: Optional]
[PREREQUISITES: Lease]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Insurance Reduction Schedule</label>
    <nameField>
        <label>Insurance Reduction Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Reduction Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>