force-app/main/default/objects/leaseworks__Insurance_Reduction_Schedule__c/fields/leaseworks__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Approval_Status__c</fullName>
    <description>Users can change the status at any time; the default value is &#39;Pending.&#39; Bulk approval can be performed using the approval buttons on the list view page. When the &#39;Approve&#39; button is clicked, the &#39;Approval Status&#39; for the reduction schedules under the contract will be updated to &#39;Approved.&#39;</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>