force-app/main/default/objects/leaseworks__Insurance_Reduction_Schedule__c/fields/leaseworks__Current_Agreed_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Agreed_Value__c</fullName>
    <label>Current Agreed Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>