force-app/main/default/objects/leaseworks__Insurance_Reduction_Schedule__c/fields/leaseworks__End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>