force-app/main/default/objects/leaseworks__Insurance_Reduction_Schedule__c/fields/leaseworks__Lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Lessee_New__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lessee</label>
    <type>Text</type>
</CustomField>