force-app/main/default/objects/leaseworks__Insurance_Reduction_Schedule__c/fields/leaseworks__Lessor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor__c</fullName>
    <description>Auto Populate from the Lease.</description>
    <formula>leaseworks__Lease__r.leaseworks__Lesor__r.Name</formula>
    <label>Lessor</label>
    <type>Text</type>
</CustomField>