force-app/main/default/objects/leaseworks__Insurance_Reduction_Schedule__c/fields/leaseworks__MSN_ESN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MSN_ESN__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Aircraft__r.leaseworks__MSN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSN/ESN</label>
    <type>Text</type>
</CustomField>