force-app/main/default/objects/leaseworks__Insurance_Reduction_Schedule__c/fields/leaseworks__Reduction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reduction__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Reduction_Percent__c</formula>
    <label>Reduction(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>