force-app/main/default/objects/leaseworks__Insurance_Reduction_Schedule__c/validationRules/leaseworks__End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__End_Date</fullName>
    <active>true</active>
    <description>The End date of the Insurance Reduction Schedule Record cannot be later than the Lease end Date.</description>
    <errorConditionFormula>leaseworks__End_Date__c &gt; leaseworks__Lease__r.leaseworks__Lease_End_Date_New__c</errorConditionFormula>
    <errorDisplayField>leaseworks__End_Date__c</errorDisplayField>
    <errorMessage>The End Date cannot be later than the Lease end date. Please select a valid End Date.</errorMessage>
</ValidationRule>