force-app/main/default/objects/leaseworks__Insurance_Reduction_Schedule__c/validationRules/leaseworks__Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Start_Date</fullName>
    <active>true</active>
    <description>The Start date of an Insurance Reduction Schedule Record should always be greater than Lease Start date and smaller than Lease end date.</description>
    <errorConditionFormula>leaseworks__Start_Date__c &lt; leaseworks__Lease__r.leaseworks__Lease_Start_Date_New__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Start_Date__c</errorDisplayField>
    <errorMessage>The Start Date cannot be earlier than the Lease start date. Please select a valid Start Date.</errorMessage>
</ValidationRule>